force-app/main/default/objects/Online_Registration__c/fields/Recommend_Enterprise_Toronto__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Enterprise_Toronto__c</fullName>
    <label>Recommend Enterprise Toronto?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>