force-app/main/default/objects/Online_Registration__c/fields/Reg_Confirmation_PDF__c.field-meta.xml
<CustomField>
    <fullName>Reg_Confirmation_PDF__c</fullName>
    <description>contains registration confirmation pdf url</description>
    <label>Reg Confirmation PDF</label>
    <type>Url</type>
</CustomField>