force-app/main/default/objects/Online_Registration__c/fields/Same_as_the_address_provided_above__c.field-meta.xml
<CustomField>
    <fullName>Same_as_the_address_provided_above__c</fullName>
    <label>Same as the address provided above</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>