force-app/main/default/objects/Online_Registration__c/fields/Service_Comment_INTRO_OTR_OTR__c.field-meta.xml
<CustomField>
    <fullName>Service_Comment_INTRO_OTR_OTR__c</fullName>
    <label>Service Comment (INTRO OTR OTR)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>