force-app/main/default/objects/Online_Registration__c/fields/Service_Requested_INTRO__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested_INTRO__c</fullName>
    <label>Service Requested (INTRO)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Named Corporation</fullName>
            </value>
            <value>
                <fullName>Numbered Corporation</fullName>
            </value>
            <value>
                <fullName>Business Name Registration</fullName>
            </value>
            <value>
                <fullName>Business Name Registration with a Name Search</fullName>
            </value>
            <value>
                <fullName>Business Name Renewal</fullName>
            </value>
            <value>
                <fullName>Business Name Renewal with a Name Search</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>