force-app/main/default/objects/Online_Registration__c/fields/Service_Requested_INTRO_OTR_OTR__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested_INTRO_OTR_OTR__c</fullName>
    <label>Service Requested (INTRO OTR OTR)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>