force-app/main/default/objects/Online_Registration__c/fields/Service_Requester_INTRO_OTR__c.field-meta.xml
<CustomField>
    <fullName>Service_Requester_INTRO_OTR__c</fullName>
    <label>Service Requested (INTRO OTR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Name Search or Corporate Profile Report</fullName>
            </value>
            <value>
                <fullName>Certified Document Replica of a Business Name Registration</fullName>
            </value>
            <value>
                <fullName>Copies of Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>Initial Return/Notice Change Filing</fullName>
            </value>
            <value>
                <fullName>Extra-Provincial Registration</fullName>
            </value>
            <value>
                <fullName>Name Amendment or Cancellation</fullName>
            </value>
            <value>
                <fullName>Name Reservation Report (NUANS)</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>Provincial Articles of Amendment</fullName>
            </value>
            <value>
                <fullName>Provincial Articles of Amendment with NUANS report</fullName>
            </value>
            <value>
                <fullName>Provincial Non-Profit Filing</fullName>
            </value>
            <value>
                <fullName>Provincial Non-Profit Filing with NUANS report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>