force-app/main/default/objects/Online_Registration__c/fields/Since_Engaging_ET_did_you_Start__c.field-meta.xml
<CustomField>
    <fullName>Since_Engaging_ET_did_you_Start__c</fullName>
    <label>Since Engaging ET, did you Start?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>