force-app/main/default/objects/Online_Registration__c/fields/Status_of_Your_Business__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Your_Business__c</fullName>
    <label>Status of Your Business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>New (operating less than 6 months)</fullName>
            </value>
            <value>
                <fullName>Existing (operating longer than 6 months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>