force-app/main/default/objects/Online_Registration__c/fields/Street_Name_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Street_Name_BNR_2Iplus__c</fullName>
    <label>Street Name (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>