force-app/main/default/objects/Online_Registration__c/fields/Street_Name_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Street_Name_INC_INC__c</fullName>
    <label>Street Name (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>