force-app/main/default/objects/Online_Registration__c/fields/Street_Number_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_BNR_2Iplus__c</fullName>
    <label>Street Number (BNR 2I+)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>