force-app/main/default/objects/Online_Registration__c/fields/Street_Number_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_INC_INC__c</fullName>
    <label>Street Number (INC INC)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>