force-app/main/default/objects/Online_Registration__c/fields/Suite_BNR_2Iplus__c.field-meta.xml
<CustomField>
    <fullName>Suite_BNR_2Iplus__c</fullName>
    <label>Suite (BNR 2I+)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>