force-app/main/default/objects/Online_Registration__c/fields/Suite_INC_INC__c.field-meta.xml
<CustomField>
    <fullName>Suite_INC_INC__c</fullName>
    <label>Suite (INC INC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>