force-app/main/default/objects/Online_Registration__c/fields/TDR_Authorize_TDR__c.field-meta.xml
<CustomField>
    <fullName>TDR_Authorize_TDR__c</fullName>
    <inlineHelpText>On behalf of our partners at TD Merchant Services, may a TD Bank representative contact you to discuss the option of accepting debit and or credit payments ( e.g Visa, Mastercard, Interac, Direct Payment) ?</inlineHelpText>
    <label>TDR Authorize (TDR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes. I authorize TD bank to contact me.</fullName>
            </value>
            <value>
                <fullName>No. I do not authorize TD bank to contact me.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>