force-app/main/default/objects/Online_Registration__c/fields/Use_which_sections__c.field-meta.xml
<CustomField>
    <fullName>Use_which_sections__c</fullName>
    <label>Use which sections?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use the standard precedent</fullName>
            </value>
            <value>
                <fullName>Provide your own information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>