force-app/main/default/objects/Online_Registration__c/listViews/Registration_Numbered_Corporations.listView-meta.xml
<ListView>
    <fullName>Registration_Numbered_Corporations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Requested_INTRO__c</field>
        <operation>equals</operation>
        <value>Numbered Corporation</value>
    </filters>
    <label>Registration - Numbered Corporations</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_BIC</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>