force-app/main/default/objects/Online_Registration__c/listViews/Registrations_Today.listView-meta.xml
<ListView>
    <fullName>Registrations_Today</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Registrations - Today</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_BIC</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>